@@ -14,6 +14,11 @@
 	* tests/httpd:		Backport new tests for http 2.7.3.
 	* tests/http.tcl:
 
+2008-04-10  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tclMacOSXBundle.c: on Mac OS X 10.4 and later, replace
+	deprecated NSModule API by dlfcn API.
+
 2008-04-09  Kevin B. Kenny  <kennykb@acm.org>
 
 	* tools/tclZIC.tcl:	Always emit Unix-style line terminators.
